--- a/index_v2.html
+++ b/index_v2.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="utf-8">
 		
-	<meta name="Author" content="Mr Foulds">
-	<meta name="Keywords" content="HTML, CSS, PHP, SQL, JavaScript">
-	<meta name="Description" content="13CSI Music Database">
+	<meta name="Author" content="Jade Kannemeyer">
+	<meta name="Keywords" content="HTML, CSS, PHP, SQL, JavaScript, Music Databases">
+	<meta name="Description" content="13CSI Music Database with 13DIT Project">
 	
 	<title>Music Database</title>
 		
@@ -30,9 +30,9 @@
 		
 		<h3>Please Login using the following format:</h3>
 		<hr></hr>
-		h3>Username: DFoulds</h3>
+		h3>Username: JKannemeyer</h3>
 		<p>For password use your intitals + Student ID Number in this format:</p>
-		<h3>Password: Dfoulds21687</h3>
+		<h3>Password: 19406</h3>
 		<p></p>
 		</div>
     </div>
