--- a/index_v1.html
+++ b/index_v1.html
@@ -1,42 +1,88 @@
-<!DOCTYPE html>
+<!DOCTYPE html >
 <html lang="en">
 
-<head>
-	<meta charset="utf-8">
-		
-	<meta name="Author" content="Mr Foulds">
-	<meta name="Keywords" content="HTML, CSS, PHP, SQL, JavaScript">
-	<meta name="Description" content="13CSI Music Database">
-	
-	<title>Music Database</title>
-		
-	<link rel="stylesheet" href="css/style.css"/>
-			
+<head> 
+<title>Elim church Wellington</title>
+
+ <meta charset="utf-8">
+  <!--compatible with microsoft edge browser--> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  
+  <!--import code needed for site to be responsive-->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <!--import keywords for search engines--> 
+  <meta name="Keywords" content="html15, layout,"/>
+  <meta name="Author" content="Jade Kannemeyer"/>
+  <meta name="Description" content="Elim church Wellignton"/>
+  
+  <!--import the webpage's stylesheet--> 
+  <link rel="stylesheet" href="css/style.css">
+  
+  <!--import the webpage's javascript file-->
+  <script src="js/script.js" defer></script> 
+
 </head>
 
-	<!-- main webpage content starts here -->  
-  <body>
-  
-	<div class="grid-container">
-	
-	<div class="header">Header</div>
-	
-	<div class="sidebar">Sidebar</div>
-	
-	<div class="content">
-		<div class="scroll-area">
-		
-		<h1><center>Login Page</center></h1>
-		
-		<h3>Sub Heading</h3>
-		<hr></hr>
-		<p></p>
-		</div>
+<body> 
+
+<div class= "wrapper">
+    <div class = "nav"> <a href="index.html">Home</a> 
+
+    <div class = "dropdown">
+        <button class = "dropbtn"><a href>Important information</a></button>
+        <div class = "dropdown-content">
+        
+        <a href = "about.html">About us</a>
+        <a href="Contact form.html">Contact form</a>
+		<a href="livestream.html">Livestream</a>
+
+        </div>
+        </div>
     </div>
+
+<div class="header">
+    <img src="">
+</div>
+
+
+<div class="box_article_1">  
+    <h1>Heading</h1>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+	Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
 	
-	<div class="footer">Footer</div>
-    
+	<br>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+	It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<br></p> 
+	
+	<div class="images">
+	<img src="images/grey.jpg" alt="Italian Trulli" class="responsive">
+	<img src="images/grey.jpg" alt="Italian Trulli" class="responsive">
 	</div>
 	
-  </body>
+	</div>
+  
+   
+ 
+ 
+<!--<div class="box_article_2"> 
+	<img src="grey.png" alt="grey image"> 
+	</div>
+
+<div class="box_article_3">
+	</div>
+
+<div class="box_article_4">
+	</div>-->
+
+
+
+<div class="footer"> 
+    <div class="logo"><img src="" width="35%"> </div>
+	<div><p> © Elim church Wellington 2023, all rights reserved.</p></div> 
+</div>
+	
+
+	
+</div>	
+</body>
 </html>
