--- a/index_v2.html
+++ b/index_v2.html
@@ -1,45 +1,88 @@
-<!DOCTYPE html>
+!DOCTYPE html >
 <html lang="en">
 
-<head>
-	<meta charset="utf-8">
-		
-	<meta name="Author" content="Mr Foulds">
-	<meta name="Keywords" content="HTML, CSS, PHP, SQL, JavaScript">
-	<meta name="Description" content="13CSI Music Database">
-	
-	<title>Music Database</title>
-		
-	<link rel="stylesheet" href="css/style.css"/>
-			
+<head> 
+<title>Elim church Wellington</title>
+
+ <meta charset="utf-8">
+  <!--compatible with microsoft edge browser--> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  
+  <!--import code needed for site to be responsive-->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <!--import keywords for search engines--> 
+  <meta name="Keywords" content="html15, layout,"/>
+  <meta name="Author" content="Jade Kannemeyer"/>
+  <meta name="Description" content="Elim church Wellignton"/>
+  
+  <!--import the webpage's stylesheet--> 
+  <link rel="stylesheet" href="css/style.css">
+  
+  <!--import the webpage's javascript file-->
+  <script src="js/script.js" defer></script> 
+
 </head>
 
-	<!-- main webpage content starts here -->  
-  <body>
-  
-	<div class="grid-container">
+<body> 
+
+<div class= "wrapper">
+
+<div class="nav topnav">
+ <!--<div class="logo"><img src="images/grey.jpg" width="35%"> </div>-->
+ 
+    <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!-- Top Navigation Menu -->
+
+
+  <a href="#home" class="active">Logo</a>
+  <!-- Navigation links (hidden by default) -->
+  <div id="myLinks">
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+
+</div>
+
+<div class="header"> 
+	<img src="images/white.jpg" alt="Italian Trulli" height="570" width="982">
 	
-	<div class="header">Header</div>
+</div>
+
+
+<div class="box_article_1">  
+    <h1>Heading</h1>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+	Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
 	
-	<div class="sidebar">Sidebar</div>
+	<br>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+	It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<br></p> 
 	
-		<div class="content">
-		<div class="scroll-area">
-		
-		<h1><center>Login Page</center></h1>
-		
-		<h3>Please Login using the following format:</h3>
-		<hr></hr>
-		h3>Username: DFoulds</h3>
-		<p>For password use your intitals + Student ID Number in this format:</p>
-		<h3>Password: Dfoulds21687</h3>
-		<p></p>
-		</div>
-    </div>
-	
-	<div class="footer">Footer</div>
-    
+	<div class="images">
+	<img src="images/grey.jpg" alt="Italian Trulli" class="responsive">
+	<img src="images/grey.jpg" alt="Italian Trulli" class="responsive">
 	</div>
 	
-  </body>
+	</div>
+  
+  
+
+
+
+<div class="footer"> 
+    <div class="logo"><img src="" width="35%"> </div>
+	<div><p> © Elim church Wellington 2023, all rights reserved.</p></div> 
+</div>
+	
+
+	
+</div>	
+</body>
 </html>
